<resources>
    <string name="app_name">RP2</string>
    <string name="my_plans">My plans</string>
    <string name="New_plan">New plan</string>
    <string name="test">test</string>
    <string name="title">Title</string>
    <string name="Location">Location</string>
    <string name="location">Location</string>
    <string name="flowers">Flowers</string>
    <string name="music">Music</string>
    <string name="Save">Save</string>
    <string name="save">Save</string>
    <string name="total">Total</string>
    <string name="total_price">"Total price "</string>
</resources>