<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--TITLE-->
    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:id="@+id/et_title"
        android:layout_height="30dp"
        android:layout_width="200dp"
        app:layout_constraintStart_toEndOf="@id/title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        >
    </EditText>

    <!--LOCATION-->
    <TextView
        android:id="@+id/location"
        android:text="@string/location"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        />
    <EditText
        android:id="@+id/et_location"
        android:layout_height="30dp"
        android:layout_width="100dp"
        app:layout_constraintStart_toEndOf="@id/location"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        >
    </EditText>

    <EditText
        android:id="@+id/et_location_price"
        android:layout_height="30dp"
        android:layout_width="100dp"
        app:layout_constraintStart_toEndOf="@id/et_location"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        >
    </EditText>

    <!--FLOWERS-->
    <TextView
        android:id="@+id/flowers"
        android:text="@string/flowers"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location"
        />
    <EditText
        android:id="@+id/et_flowers"
        android:layout_height="30dp"
        android:layout_width="100dp"
        app:layout_constraintStart_toEndOf="@id/flowers"
        app:layout_constraintTop_toBottomOf="@id/location"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        >
    </EditText>

    <EditText
        android:id="@+id/et_flowers_price"
        android:layout_height="30dp"
        android:layout_width="100dp"
        app:layout_constraintStart_toEndOf="@id/et_flowers"
        app:layout_constraintTop_toBottomOf="@id/location"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        >
    </EditText>

    <!--MUSIC-->
    <TextView
        android:id="@+id/music"
        android:text="@string/music"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flowers"
        />
    <EditText
        android:id="@+id/et_music"
        android:layout_height="30dp"
        android:layout_width="100dp"
        app:layout_constraintStart_toEndOf="@id/music"
        app:layout_constraintTop_toBottomOf="@id/flowers"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        >
    </EditText>

    <EditText
        android:id="@+id/et_music_price"
        android:layout_height="30dp"
        android:layout_width="100dp"
        app:layout_constraintStart_toEndOf="@id/et_music"
        app:layout_constraintTop_toBottomOf="@id/flowers"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        >
    </EditText>

    <!--TOTAL-->
    <TextView
        android:id="@+id/total"
        android:text="@string/total"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save"
        />
    <TextView
        android:id="@+id/total_price"
        android:text="@string/total_price"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/total"
        app:layout_constraintBottom_toTopOf="@id/save"
        />
    <!--SAVE BUTTON-->
    <Button
        android:id="@+id/save"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:backgroundTint="#0091BF"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>